<resources>
    <string name="app_name">割り勘計算</string>
    <string name="hint_total_pay">請輸入總金額</string>
    <string name="btn_calculate">計算</string>
    <string name="txt_collect_money_prefix">每人收取金額：</string>
    <string name="txt_kanji_pay_prefix">幹事支付金額：</string>
    <string name="toast_input_required">請輸入總金額</string>
    <string name="toast_input_error">輸入格式錯誤</string>
    <string name="toast_input_must_be_positive">金額必須大於 0</string>
    <string name="toast_input_too_large">金額不可超過 7 位數</string>
    <string name="img_logo_desc">應用程式標誌</string>
    <!-- RadioGroup 標題 -->
    <string name="lbl_round_unit">集金單位</string>

    <!-- RadioButton 選項 -->
    <string name="unit_100">100円</string>
    <string name="unit_500">500円</string>
    <string name="unit_1000">1000円</string>

    <string name="label_kanji_bonus">幹事得模式（幹事少付）</string>

    <string name="label_second_party">二次會模式（多收預留）</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>




    <string-array name="people_array">
        <item>2 人</item>
        <item>3 人</item>
        <item>4 人</item>
        <item>5 人</item>
        <item>6 人</item>
        <item>7 人</item>
        <item>8 人</item>
        <item>9 人</item>
    </string-array>
</resources>
